--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.19
+	minecraft_version=1.20.1
+	yarn_mappings=1.20.1+build.9
+	loader_version=0.14.21
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = user-info
 
 # Dependencies
-	fabric_version=0.77.0+1.19.4
+	fabric_version=0.85.0+1.20.1
